--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "dayjs": "^1.11.9",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue2-script-setup": "^0.11.4",
-    "vant": "^2.13.2",
-    "echarts": "^5.3.1"
+    "vant": "^2.13.2"
   }
 }
